--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "preimport:projectSetup": "npm run build",
     "import:projectSetup": "node dist/lib/project-setup.js --projectKey $npm_package_config_projectKey --clientId $npm_package_config_clientId --clientSecret $npm_package_config_clientSecret --apiUrl $npm_package_config_apiUrl --authUrl $npm_package_config_authUrl",
     "import:categories": "./mvnw spring-boot:run -DprojectCleanUp=false -DprojectSetUp=false -DchannelsImport=false -DcategoryImport=true -DcatalogImport=false -DreserveInStore=false -DordersImport=false -Dctp.projectKey=$npm_package_config_projectKey -Dctp.clientId=$npm_package_config_clientId -Dctp.clientSecret=$npm_package_config_clientSecret -Dctp.authUrl=$npm_package_config_authUrl -Dctp.apiUrl=$npm_package_config_apiUrl -Dctp.protocol=https",
-    "import:orders": "./mvnw spring-boot:run -DprojectCleanUp=false -DprojectSetUp=false -DchannelsImport=false -DcategoryImport=false -DcatalogImport=false -DreserveInStore=false -DordersImport=true -Dctp.projectKey=$npm_package_config_projectKey -Dctp.clientId=$npm_package_config_clientId -Dctp.clientSecret=$npm_package_config_clientSecret -Dctp.authUrl=$npm_package_config_authUrl -Dctp.apiUrl=$npm_package_config_apiUrl -Dctp.protocol=https",
+    "preimport:orders": "npm run build",
+    "import:orders": "node dist/lib/orders.js --import --projectKey $npm_package_config_projectKey --clientId $npm_package_config_clientId --clientSecret $npm_package_config_clientSecret --apiUrl $npm_package_config_apiUrl --authUrl $npm_package_config_authUrl",
     "preimport:zones": "npm run build",
     "import:zones": "node dist/lib/zones.js --import --projectKey $npm_package_config_projectKey --clientId $npm_package_config_clientId --clientSecret $npm_package_config_clientSecret --apiUrl $npm_package_config_apiUrl --authUrl $npm_package_config_authUrl",
     "preimport:shippingmethods": "npm run build",
@@ -70,13 +71,14 @@
     "path": "0.12.7",
     "rimraf": "2.6.2",
     "snazzy": "7.1.1",
-    "sphere-node-cli": "1.0.4",
+    "sphere-node-cli": "^1.0.4",
     "sphere-node-product-csv-sync": "0.20.4",
     "sphere-stock-import": "1.3.1",
     "standard": "11.0.1"
   },
   "dependencies": {
-    "@commercetools/sdk-auth": "^1.5.0"
+    "@commercetools/sdk-auth": "^1.5.0",
+    "sphere-category-sync": "^1.1.1"
   },
   "engines": {
     "node": "^8"
