--- a/package.json
+++ b/package.json
@@ -79,30 +79,32 @@
   },
   "homepage": "https://github.com/commercetools/commercetools-sunrise-data#readme",
   "devDependencies": {
-    "@commercetools/api-request-builder": "5.0.0",
-    "@commercetools/sdk-client": "2.0.0",
-    "@commercetools/sdk-middleware-auth": "5.0.0",
-    "@commercetools/sdk-middleware-http": "5.0.0",
+    "@commercetools/api-request-builder": "5.3.0",
+    "@commercetools/sdk-client": "2.1.0",
+    "@commercetools/sdk-middleware-auth": "5.1.1",
+    "@commercetools/sdk-middleware-http": "5.2.0",
     "babel-cli": "6.26.0",
     "babel-preset-env": "1.7.0",
+    "braces": "^3.0.2",
     "cross-env": "^5.2.0",
+    "fstream": "^1.0.12",
     "nconf": "0.10.0",
     "path": "0.12.7",
     "rimraf": "2.6.3",
     "snazzy": "8.0.0",
-    "sphere-node-cli": "^2.1.7",
-    "sphere-node-product-csv-sync": "1.5.4",
+    "sphere-node-cli": "^3.0.0",
+    "sphere-node-product-csv-sync": "2.0.0",
     "sphere-stock-import": "^2.1.0",
     "standard": "12.0.1"
   },
   "dependencies": {
-    "@commercetools/sdk-auth": "^2.0.0",
-    "csvtojson": "^2.0.8",
-    "es6-promise": "^4.2.5",
+    "@commercetools/sdk-auth": "^2.1.1",
+    "csvtojson": "^2.0.10",
+    "es6-promise": "^4.2.8",
     "isomorphic-fetch": "^2.2.1",
     "sphere-category-sync": "^1.2.0"
   },
   "engines": {
-    "node": "^8"
+    "node": "^10"
   }
 }
